@@ -659,8 +659,22 @@ GlideComputerAirData::Turning()
   bool forcecruise = false;
   bool forcecircling = false;
   if (SettingsComputer().EnableExternalTriggerCruise && !Basic().gps.Replay) {
-    forcecircling = Basic().SwitchState.VarioCircling;
-    forcecruise = !forcecircling;
+    switch (Basic().SwitchState.FlightMode) {
+    case SWITCH_INFO::MODE_UNKNOWN:
+      forcecircling = false;
+      forcecruise = false;
+      break;
+
+    case SWITCH_INFO::MODE_CIRCLING:
+      forcecircling = true;
+      forcecruise = false;
+      break;
+
+    case SWITCH_INFO::MODE_CRUISE:
+      forcecircling = false;
+      forcecruise = true;
+      break;
+    }
   }
 
   switch (Calculated().TurnMode) {
